--- a/src/assets/scss/components/_dashboard-layout.scss
+++ b/src/assets/scss/components/_dashboard-layout.scss
@@ -1,6 +1,8 @@
 .dashboard-layout {
+  max-height: calc(100vh - 72px);
   padding-left: calc(320px + 15px);
-  transition: 0.4s;
+  overflow-x: auto;
+  transition: padding-left 0.4s;
 
   &--sidebar-hidden {
     padding-left: 15px;
